--- a/Client/wwwroot/appsettings.json
+++ b/Client/wwwroot/appsettings.json
@@ -8,5 +8,11 @@
   "SystemConfig": {
     "key": "I was right"
   },
+  "AzureAdB2C": {
+    "Authority": "https://skillsboxcampususerb2cdev.b2clogin.com/skillsboxcampususerb2cdev.onmicrosoft.com/B2C_1_CampusUserSignin",
+    "ClientId": "c44bd3e4-40f9-4300-9cda-c39746922721",
+    "ValidateAuthority": false,
+    "Version": "dev"
+  },
   "AllowedHosts": "*"
 }
