--- a/.github/workflows/deploy-teacher.yml
+++ b/.github/workflows/deploy-teacher.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 env:
   AZURE_WEBAPP_NAME: BlazorWasmMultipleAppsettings-Azure
-  AZURE_WEBAPP_PACKAGE_PATH: Client\published
+  AZURE_WEBAPP_PACKAGE_PATH: Client/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: Client
